# AI-Code-Explainer

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  COMMANDS.md
src/explain_code/: __init__.py  __main__.py  cache.py  cli.py  complexity.py  config.py  errors.py  extractors.py  formatter.py  models.py  openai_client.py  prompting.py  service.py
tests/: test_cache.py  test_complexity.py  test_extractors.py
