[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "explain-code"
version = "0.1.0"
description = "CLI tool that explains complex source code in plain English."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "explain-code contributors" }]
keywords = ["cli", "openai", "code-explanation", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "openai>=1.40.0,<2.0.0",
  "platformdirs>=4.0.0,<5.0.0",
  "typer>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0.0", "ruff>=0.6.0,<1.0.0"]

[project.scripts]
explain-code = "explain_code.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
